Change description in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "sergeybruhin/html-sitemap",
-    "description": "Laravel Page Meta Package",
+    "description": "Laravel Html Sitemap Package",
     "keywords": [
         "sergeybruhin",
         "html-sitemap",
